[tool.poetry]
name = "sage-ws"
version = "0.1.0"
description = ""
authors = ["Rudra Arora <aroraru@tcd.ie>"]
readme = "README.md"
packages = [{ include = "sage_ws" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
websockets = "^11.0.1"
requests = "^2.28.2"
jsonschema = "^4.17.3"
googlemaps = "^4.10.0"
polyline = "^2.0.0"
geojson = "^3.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
